--- a/.github/workflows/release-zip.yml
+++ b/.github/workflows/release-zip.yml
@@ -21,5 +21,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: latest-installer.zip
-        path: packages/latest-installer.zip
+        path: packages/*
 
