--- a/.github/workflows/release-zip.yml
+++ b/.github/workflows/release-zip.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Publish zip file
       uses: actions/upload-artifact@v2
       with:
-        name: latest-installer.zip
+        name: jira-command-line.zip
         path: packages/*
 
