--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,18 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: xray-ui",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/xray-ui",
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "env": {},
+            "stopOnEntry": false,
+            "breakOnException": true,
+            "justMyCode": true
+        },
+        {
             "name": "Debug Jira Script (Sprint Mode)",
             "type": "debugpy",
             "request": "launch",
