--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        # Use Unix-specific requirements file for CI (no windows-curses)
+        pip install -r requirements-unix.txt
         pip install -r requirements-test.txt
 
     - name: Run full test suite
@@ -52,7 +53,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        # Use Unix-specific requirements file for CI (no windows-curses)
+        pip install -r requirements-unix.txt
 
     - name: Test basic functionality
       run: |
