--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements-unix.txt', 'requirements-test.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
 
@@ -37,7 +37,8 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        # Use Unix-specific requirements file for CI (no windows-curses)
+        pip install -r requirements-unix.txt
         pip install -r requirements-test.txt
 
     - name: Lint with flake8 (if available)
